--- a/tests/test_fir_model/.cproject
+++ b/tests/test_fir_model/.cproject
@@ -200,6 +200,9 @@
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include/clang&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_xassert/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_logging/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/xc"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.1602114263" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -526,6 +529,8 @@
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include/clang&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_xassert/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_logging/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.154099666" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -859,6 +864,9 @@
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include/c++/v1&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_xassert/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_logging/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/c++/v1"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.1293507097" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
