--- a/tests/test_output/.cproject
+++ b/tests/test_output/.cproject
@@ -219,6 +219,9 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/rst/images}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/doc/pdf}&quot;"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/xc"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.826464802" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -564,6 +567,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/rst/images}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/doc/pdf}&quot;"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.213053538" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -916,6 +921,9 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/rst/images}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/doc/pdf}&quot;"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/c++/v1"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.1520449818" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
