--- a/tests/test_fir_model/Makefile
+++ b/tests/test_fir_model/Makefile
@@ -16,9 +16,10 @@ USED_MODULES = lib_logging lib_mic_array
 # XCC_XC_FLAGS, XCC_C_FLAGS, XCC_ASM_FLAGS, XCC_CPP_FLAGS
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
-COMMON_FLAGS = -O2 -g -DDEBUG_PRINT_ENABLE=1 -report
+COMMON_FLAGS = -O2 -g -DDEBUG_PRINT_ENABLE=1 -report -Wno-timing
 
 XCC_FLAGS_COUNT4_LONG = $(COMMON_FLAGS) -DCOUNT=4 -DMIC_ARRAY_WORD_LENGTH_SHORT=0
+XCC_XC_FLAGS_COUNT4_LONG = 
 XCC_FLAGS_COUNT64_LONG = $(COMMON_FLAGS) -DCOUNT=64 -DMIC_ARRAY_WORD_LENGTH_SHORT=0
 XCC_FLAGS_COUNT4_SHORT = $(COMMON_FLAGS) -DCOUNT=4 -DMIC_ARRAY_WORD_LENGTH_SHORT=1
 XCC_FLAGS_COUNT64_SHORT = $(COMMON_FLAGS) -DCOUNT=64 -DMIC_ARRAY_WORD_LENGTH_SHORT=1
