--- a/tests/measure_phase_delay/.cproject
+++ b/tests/measure_phase_delay/.cproject
@@ -216,6 +216,13 @@
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/xc"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/api}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/fft}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.1577922696" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -557,6 +564,13 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/rst/images}&quot;"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/api}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/fft}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.1540568261" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -906,6 +920,13 @@
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/c++/v1"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/api}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/fft}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.1425732498" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
