--- a/examples/AN00219_app_lores_DAS_fixed/.cproject
+++ b/examples/AN00219_app_lores_DAS_fixed/.cproject
@@ -235,6 +235,13 @@
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/xc"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/api}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/fft}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.505416709" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -595,6 +602,13 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/fir}&quot;"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/api}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/fft}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.1590139567" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -963,6 +977,13 @@
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/c++/v1"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/api}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/fft}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.798953824" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
