--- a/tests/test_lib_include/.cproject
+++ b/tests/test_lib_include/.cproject
@@ -205,6 +205,13 @@
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/xc"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/fft}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/api}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.1807599309" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -535,6 +542,13 @@
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include/clang&quot;"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/fft}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/api}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.1144663686" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -873,6 +887,13 @@
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/clang"/>
 									<listOptionValue builtIn="false" value="/ssdbuilds/vda_view/Installs/Linux/target/include/c++/v1"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/src/fft}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/api}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.1308585647" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
